# rag-on-azure

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  azure.yaml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: release-please.yml
docs/design/: rag-on-azure.md
infra/: main.bicep  main.parameters.example.json
infra/modules/: containerapp.bicep  keyvault.bicep  monitor.bicep  openai.bicep  search.bicep
ingest/: corpus_manifest.yaml  pyproject.toml
ingest/src/ingest/: __init__.py  __main__.py  chunk.py  clients.py  fetch.py  index.py  schema.py
ingest/tests/unit/: test_chunk.py  test_clients.py  test_fetch.py  test_index.py  test_schema.py  test_smoke.py
