[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ingest"
version = "0.0.0"
description = "Corpus fetch/chunk/index pipeline for rag-on-azure"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Berkay Yildirim" }]
dependencies = [
    "azure-search-documents>=11.5,<12",
    "azure-identity>=1.18,<2",
    "aiohttp>=3.10,<4",
    "openai>=1.50,<2",
    "httpx>=0.27,<1",
    "langchain-text-splitters>=0.3,<0.4",
    "markdownify>=0.13,<1",
    "tiktoken>=0.8,<1",
    "pydantic>=2.9,<3",
    "pyyaml>=6.0,<7",
    "tenacity>=9.0,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    "types-pyyaml>=6.0,<7",
]

[project.scripts]
ingest = "ingest.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
